Unify scrolling for oversized articles